@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Generated ::Install::Files POD missing pod coverage
+    exception (gh#7, gh#14)
 
 0.07      2020-02-05 21:31:12 -0700
   - Generate ::Install::Files module like Alien::Build::MM
